--- a/estilos.css
+++ b/estilos.css
@@ -7,6 +7,8 @@
 body {
     font-size: 10px;
     font-family: 'Quicksand', sans-serif;
+    margin-left: auto;
+    margin-right: auto;
   }
 
 @media (min-width: 590px){
@@ -48,17 +50,14 @@ header {
     display: block;
     padding: 10px 10px;
     padding-top: 5px;
-}
-  
-a {
     text-decoration: none;
     text-align: center;
     color:white;
     font-size: 2em;
     font-family: 'Baloo 2', cursive;
-  }
+}
   
-a:hover {
+.menu a:hover {
     transform: scale(1.2);
     transition: 300ms;
   }
@@ -81,7 +80,7 @@ a:hover {
     opacity: 0;
   }
   to{
-    transform: scale(1.2);
+    transform: scale(1.1);
     opacity: 1;
   }
 }
@@ -100,7 +99,7 @@ a:hover {
   }
   to{
     opacity: 1;
-    transform: scale(1.2);
+    transform: scale(1.1  );
   }
 }
 
@@ -115,18 +114,15 @@ a:hover {
   transition: 300ms;
 }
 
-section{
-  background-color: #B8860B;
-}
-
-.obras h2, .contato h2{
+.obras h2, .sobre h2{
   margin-bottom: 1em;
   font-size: 2.8em;
   padding-top: 60px;
 }
 
-.obras, .contato {
+.obras, .sobre {
   padding: 1.5em;  
+  background-color: #B8860B;
 }
 
 .obras .grid {
@@ -155,11 +151,40 @@ section{
   }
 }
 
-.contato a{
-  font-size: 2.5em;
+.sobre img{
+  float: right;
+  margin-left: 30px;
+  height: 100px;
+  width: 150px;
 }
 
-.contato .icons{
+@media (min-width: 590px){
+  .sobre img{
+    height: 180px;
+    width: 220px;
+  }
+}
+
+@media (min-width: 1000px){
+  .sobre img{
+    height: 260px;
+    width: 310px;
+  }
+}
+
+.sobre p{
+  text-align: justify;
+  text-indent: 5%;
+  font-size: 1.8em;
+  margin-bottom: 40px;
+}
+.sobre a{
+  font-size: 2.5em;
+  color: white;
+  text-decoration: none;
+}
+
+.sobre .icons{
   display: grid;
   gap: 1.8em;
   text-align: center;
@@ -167,8 +192,6 @@ section{
   padding-bottom: 70px;
 }
 
-.contato a:hover{
-  text-decoration: none;
-  font-weight: normal;
+.sobre a:hover{
   text-shadow: 0 0 15px black;
 }
